# PhotonSurrogateModel.jl

./: .gitignore  Manifest.toml  Project.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
docs/: Project.toml  make.jl
docs/src/: index.md
examples/: fix_bson.jl  plot_amplitude_model.ipynb  plot_amplitude_model.jl  plot_surrogate_model_py.ipynb  train_gnn_surrogate.jl
scripts/: eval_sr_from_mlp.jl  sr_utils.jl  symbolic_regression_dev_from_mlp.jl
src/: PhotonSurrogateModel.jl  analytic_surrogate.jl  fisher_information.jl  rq_spline_flow.jl
src/analytic_surrogate/: amplitude.jl
src/legacy/: amplitude_models.jl  fisher_information.jl  time_models.jl  utils.jl
src/legacy/analytic_surrogate/: amplitude.jl
src/neural_surrogate/: amplitude_model.jl
src/photon_surrogate/: amplitude_models.jl  dataio.jl  time_models.jl  utils.jl
test/: runtests.jl
